--- a/src/app/client/src/app/modules/groups/components/activity/activity-search/activity-search.component.scss
+++ b/src/app/client/src/app/modules/groups/components/activity/activity-search/activity-search.component.scss
@@ -91,9 +91,14 @@
   &__info {
     color: var(--gray-800);
     font-size: calculateRem(14px);
+    align-items: center;
     @include respond-below(sm) {
       flex-direction: column;
       margin-top: calculateRem(8px) !important;
+      align-items: flex-start;
+      button{
+        margin-top: 0.5rem;
+      }
     }
   }
 }
